# snipet

./: LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  pocketbase_schema.md  vite.config.ts
snipet-cli/: Cargo.toml  README.md
snipet-cli/src/: main.rs
src/: App.tsx  index.css
src/components/: CommentThread.tsx  DiffView.tsx  EditSnippetModal.tsx  FeedSnippetCard.tsx  Layout.tsx  Navbar.tsx  SnippetCard.tsx
src/components/ui/: dropdown-menu.tsx  select.tsx  switch.tsx
src/hooks/: useAuth.tsx
src/lib/: custom-langs.ts  pocketbase.ts  utils.ts
src/pages/: CreateSnippet.tsx  EditProfile.tsx  Home.tsx  Login.tsx  Profile.tsx  Register.tsx  SnippetDetail.tsx
