[package]
name = "snipet"
version = "0.1.0"
edition = "2021"
description = "CLI tool for posting code snippets to Snipet from the command line"
authors = ["Sebastian Korotkiewicz"]

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
toml = "0.8"
colored = "2"
atty = "0.2"

[[bin]]
name = "snipet"
path = "src/main.rs"
